Circle Dependency: newInstance method deprecated
https://blog.csdn.net/stdio_54456153/article/details/99468742